[package]
name = "mcj"
version = "0.1.0"
edition = "2021"
description = "Minecraft 世界 JSON 序列化工具"

[dependencies]
fastnbt = "2"
fastanvil = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
flate2 = "1.0"
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
